# napari-k2-WaveBreaker

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_k2_autocorrelation/: __init__.py  _widget.py  crosscorrelation.py  napari.yaml
src/napari_k2_autocorrelation/_tests/: test_sample_data.py  test_widget.py
src/napari_k2_autocorrelation/static/: UI.ui  form.ui
src/napari_k2_wavebreaker/: ClickLabel.py  __init__.py  _widget.py  autocorrelation.py  crosscorrelation.py  functions.py  napari.yaml
src/napari_k2_wavebreaker/_tests/: IMG0012_Kv1 TTX CTRL_IMG0012_Kv1_TTX_CTRL_STED_1_cmle_ch00.tif  IMG0012_Kv1 TTX CTRL_IMG0012_Kv1_TTX_CTRL_STED_1_cmle_ch01.tif  Img2_100_Alternating.tif  test_sample_data.py  test_widget.py
src/napari_k2_wavebreaker/static/: UI.ui  form.ui
static/: Post-processing.py  TEMPLATE AUTOCORRELATION 0.17-0.21 (x10).xlsx  UI.ui
