[metadata]
name = napari-k2-WaveBreaker
version = 0.1.5
description = later
long_description = file: README.md
long_description_content_type = text/markdown

author = Sam Kris Vanspauwen
author_email = sam.vanspauwen.dk@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing


[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    plotly
    pandas
    scikit-learn
    opencv-python
    matplotlib
    pathvalidate

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-k2-WaveBreaker = napari_k2_wavebreaker:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml, *.ui, *.png , *.svg
